--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
         "postcss-import": "^14.0.1",
+        "qrcodejs": "^1.0.0",
         "tailwindcss": "^2.1.2",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
